# BackEnd_Study

./: README.md
Django/airbnb/: README.md  pyproject.toml
Django/airbnb/config/: settings.py
Django/airbnb/houses/: admin.py  models.py
Django/airbnb/houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pet_allowed.py
airbnb_django_backend/: README.md
airbnb_django_backend/config/: settings.py
airbnb_django_backend/houses/: admin.py  models.py
airbnb_django_backend/houses/migrations/: 0001_initial.py  0002_house_pet_allowed.py
