[tool.poetry]
name = "airbnb"
version = "0.1.0"
description = ""
authors = ["Euiyeon-Kim <keywi9811key@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
